--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
             >Books</a
           >
           <a
-            href="rules.html"
+            href="faq.html"
             class="text-sm font-semibold leading-6 text-gray-900"
             >Faq</a
           >
