--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
     </header>
     <div class="px-6 lg:px-8">
       <div class="grid grid-cols-12 gap-4">
-        <div class="bg-white col-span-3 border p-2 bg-gray-50">
+        <div class="col-span-12 md:col-span-3 border p-2 bg-gray-50">
           <img
             src="https://scontent.fktm6-1.fna.fbcdn.net/v/t39.30808-6/449139376_1529653701230649_6592136380452492254_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=Lncp_D0Lz1sQ7kNvgFm-FoO&_nc_zt=23&_nc_ht=scontent.fktm6-1.fna&_nc_gid=A6xuVC5BXAXJK49GPSnn-QI&oh=00_AYDNPMMsK67erWYnv-UWo43XfDwwnjPMpoYQoE_3CgZoWA&oe=6724101A"
             alt=""
@@ -56,7 +56,7 @@
           <p>Class: 12</p>
           <p>Fine: 0</p>
         </div>
-        <div class="col-span-9">
+        <div class="col-span-12 md:col-span-9">
           <p>Book I borrow</p>
           <div class="grid grid-cols-1 gap-x-4 gap-y-4 lg:grid-cols-3">
             <article
