--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
             <span class="text-lg font-semibold">Ashim Library</span>
           </a>
         </div>
-        <div class="flex lg:gap-x-12">
+        <div class="flex gap-x-6  lg:gap-x-12">
           <a
             href="index.html"
             class="text-sm font-semibold leading-6 text-gray-900"
