--- a/index.html
+++ b/index.html
@@ -1,100 +1,154 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <header class="bg-white">
-      <nav
-        class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8"
-        aria-label="Global"
-      >
-        <div class="flex lg:flex-1">
-          <a href="index.html" class="-m-1.5 p-1.5 flex gap-2 items-center">
-            <span class="sr-only">Ashim Library</span>
-            <img
-              class="h-8 w-auto rounded-md"
-              src="https://images.unsplash.com/photo-1593882100241-aef1449fe351"
-              alt="Ashim Library"
-            />
-            <span class="text-lg font-semibold">Ashim Library</span>
-          </a>
-        </div>
-        <div class="flex lg:gap-x-12">
-          <a
-            href="index.html"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >Books</a
-          >
-          <a
-            href="faq.html"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >Faq</a
-          >
-        </div>
-        <div class="flex lg:flex-1 lg:justify-end">
-          <a
-            href="profile.html"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >My Profile <span aria-hidden="true">&rarr;</span></a
-          >
-        </div>
-      </nav>
-    </header>
-    <div class="bg-white py-20">
-      <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto">
-          <div class="">
-            <input
-              type="text"
-              name="first-name"
-              id="first-name"
-              autocomplete="book-name"
-              placeholder="Search book"
-              class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-        <div
-          class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-4 gap-y-4 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3"
-        >
-          <article
-            class="flex max-w-xl flex-col items-start justify-between border p-4 rounded"
-          >
-            <div class="group relative">
-              <h3
-                class="text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600"
-              >
-                <a href="#">
-                  <span class="absolute inset-0"></span>
-                  Sharpen your Mind
-                </a>
-              </h3>
-              <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600">
-                Learn to focus, and bla bla and bla
-              </p>
-            </div>
-            <div class="relative mt-2 flex items-center gap-x-4">
-              <img
-                src="https://scontent.fktm6-1.fna.fbcdn.net/v/t39.30808-6/449139376_1529653701230649_6592136380452492254_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=Lncp_D0Lz1sQ7kNvgFm-FoO&_nc_zt=23&_nc_ht=scontent.fktm6-1.fna&_nc_gid=A6xuVC5BXAXJK49GPSnn-QI&oh=00_AYDNPMMsK67erWYnv-UWo43XfDwwnjPMpoYQoE_3CgZoWA&oe=6724101A"
-                alt=""
-                class="h-10 w-10 rounded-full bg-gray-50"
-              />
-              <div class="text-sm leading-6">
-                <p class="font-semibold text-gray-900">
-                  <a href="#">
-                    <span class="absolute inset-0"></span>
-                    Ashim Sedai
-                  </a>
-                </p>
-                <p class="text-gray-600">Author / CTO / Father</p>
-              </div>
-            </div>
-          </article>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body>
+  <header class="bg-white">
+    <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+      <div class="flex lg:flex-1">
+        <a href="index.html" class="-m-1.5 p-1.5 flex gap-2 items-center">
+          <span class="sr-only">Ashim Library</span>
+          <img class="h-8 w-auto rounded-md" src="https://images.unsplash.com/photo-1593882100241-aef1449fe351"
+            alt="Ashim Library" />
+          <span class="text-lg font-semibold">Ashim Library</span>
+        </a>
+      </div>
+      <div class="flex gap-x-6 lg:gap-x-12">
+        <a href="index.html" class="text-sm font-semibold leading-6 text-gray-900">Books</a>
+        <a href="faq.html" class="text-sm font-semibold leading-6 text-gray-900">FAQ</a>
+      </div>
+      <div class="flex lg:flex-1 lg:justify-end">
+        <a href="profile.html" class="text-sm font-semibold leading-6 text-gray-900">My Profile <span
+            aria-hidden="true">&rarr;</span></a>
+      </div>
+    </nav>
+  </header>
+  <div class="bg-white py-20">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto">
+        <div class="">
+          <input type="text" name="first-name" id="first-name" autocomplete="book-name" placeholder="Search book"
+            class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
         </div>
       </div>
+      <div
+        class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-4 gap-y-4 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+        <article class="flex max-w-xl flex-col items-start justify-between border p-4 rounded">
+          <div class="group relative">
+            <h3 class="text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+              <a href="#">
+                <span class="absolute inset-0"></span>
+                Bacis Mathmatics
+              </a>
+            </h3>
+            <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600">
+              To create an apitude for Mathmatics, understanding mathematical principles.
+            </p>
+          </div>
+          <div class="relative mt-2 flex items-center gap-x-4">
+            <img
+              src="https://scontent.fktm6-1.fna.fbcdn.net/v/t39.30808-6/449139376_1529653701230649_6592136380452492254_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=Lncp_D0Lz1sQ7kNvgFm-FoO&_nc_zt=23&_nc_ht=scontent.fktm6-1.fna&_nc_gid=A6xuVC5BXAXJK49GPSnn-QI&oh=00_AYDNPMMsK67erWYnv-UWo43XfDwwnjPMpoYQoE_3CgZoWA&oe=6724101A"
+              alt="" class="h-10 w-10 rounded-full bg-gray-50" />
+            <div class="text-sm leading-6">
+              <p class="font-semibold text-gray-900">
+                <a href="#">
+                  <span class="absolute inset-0"></span>
+                  Ashim Sedai
+                </a>
+              </p>
+              <p class="text-gray-600">Author / CTO / Father</p>
+            </div>
+          </div>
+        </article>
+        <article class="flex max-w-xl flex-col items-start justify-between border p-4 rounded">
+          <div class="group relative">
+            <h3 class="text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+              <a href="#">
+                <span class="absolute inset-0"></span>
+                Bacis Mathmatics
+              </a>
+            </h3>
+            <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600">
+              To create an apitude for Mathmatics, understanding mathematical principles.
+            </p>
+          </div>
+          <div class="relative mt-2 flex items-center gap-x-4">
+            <img
+              src="https://scontent.fktm6-1.fna.fbcdn.net/v/t39.30808-6/449139376_1529653701230649_6592136380452492254_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=Lncp_D0Lz1sQ7kNvgFm-FoO&_nc_zt=23&_nc_ht=scontent.fktm6-1.fna&_nc_gid=A6xuVC5BXAXJK49GPSnn-QI&oh=00_AYDNPMMsK67erWYnv-UWo43XfDwwnjPMpoYQoE_3CgZoWA&oe=6724101A"
+              alt="" class="h-10 w-10 rounded-full bg-gray-50" />
+            <div class="text-sm leading-6">
+              <p class="font-semibold text-gray-900">
+                <a href="#">
+                  <span class="absolute inset-0"></span>
+                  Ashim Sedai
+                </a>
+              </p>
+              <p class="text-gray-600">Author / CTO / Father</p>
+            </div>
+          </div>
+        </article>
+        <article class="flex max-w-xl flex-col items-start justify-between border p-4 rounded">
+          <div class="group relative">
+            <h3 class="text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+              <a href="#">
+                <span class="absolute inset-0"></span>
+                Bacis Physic
+              </a>
+            </h3>
+            <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600">
+              To create an apitude for Physic, understanding physical principles.
+            </p>
+          </div>
+          <div class="relative mt-2 flex items-center gap-x-4">
+            <img
+              src="https://scontent.fktm6-1.fna.fbcdn.net/v/t39.30808-6/449139376_1529653701230649_6592136380452492254_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=Lncp_D0Lz1sQ7kNvgFm-FoO&_nc_zt=23&_nc_ht=scontent.fktm6-1.fna&_nc_gid=A6xuVC5BXAXJK49GPSnn-QI&oh=00_AYDNPMMsK67erWYnv-UWo43XfDwwnjPMpoYQoE_3CgZoWA&oe=6724101A"
+              alt="" class="h-10 w-10 rounded-full bg-gray-50" />
+            <div class="text-sm leading-6">
+              <p class="font-semibold text-gray-900">
+                <a href="#">
+                  <span class="absolute inset-0"></span>
+                  Ashim Sedai
+                </a>
+              </p>
+              <p class="text-gray-600">Author / CTO / Father</p>
+            </div>
+          </div>
+        </article>
+        <article class="flex max-w-xl flex-col items-start justify-between border p-4 rounded">
+          <div class="group relative">
+            <h3 class="text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+              <a href="#">
+                <span class="absolute inset-0"></span>
+                Bacis Chemistry
+              </a>
+            </h3>
+            <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600">
+              To create an apitude for Chemistry, understanding Chemistrical principles.
+            </p>
+          </div>
+          <div class="relative mt-2 flex items-center gap-x-4">
+            <img
+              src="https://scontent.fktm6-1.fna.fbcdn.net/v/t39.30808-6/449139376_1529653701230649_6592136380452492254_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=Lncp_D0Lz1sQ7kNvgFm-FoO&_nc_zt=23&_nc_ht=scontent.fktm6-1.fna&_nc_gid=A6xuVC5BXAXJK49GPSnn-QI&oh=00_AYDNPMMsK67erWYnv-UWo43XfDwwnjPMpoYQoE_3CgZoWA&oe=6724101A"
+              alt="" class="h-10 w-10 rounded-full bg-gray-50" />
+            <div class="text-sm leading-6">
+              <p class="font-semibold text-gray-900">
+                <a href="#">
+                  <span class="absolute inset-0"></span>
+                  Ashim Sedai
+                </a>
+              </p>
+              <p class="text-gray-600">Author / CTO / Father</p>
+            </div>
+          </div>
+        </article>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
